feat(ai): 实现AI题目生成任务化与异步处理
- 新增 generation_tasks 表支持异步任务状态管理
- 添加消息表字段存储用户真实请求和模型原始响应
- 实现创建异步生成任务接口 /question/v2/tasks
- 实现查询任务状态接口 /question/v2/tasks/{taskId}
- 前端集成异步任务轮询和状态展示机制
- 重构后端服务层支持任务化生成流程
- 更新数据库连接和会话配置参数